[package]
name = "bit-set-omnitool"
version = "0.6.0"
authors = ["Alexis Beingessner <a.beingessner@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "A set of bits"
repository = "https://github.com/contain-rs/bit-set"
homepage = "https://github.com/contain-rs/bit-set"
documentation = "https://docs.rs/bit-set/"
keywords = ["data-structures", "bitset"]
readme = "README.md"

[dev-dependencies]
rand = "0.8"

[dependencies.bit-vec-omnitool]
version = "0.7.0"
default-features = false
path = "../bit-vec-omnitool/"

[features]
default = ["std"]
std = ["bit-vec-omnitool/std"]
bench = []
